refactor: minor change from get(0) to getFirst() in tests